2005-08-29  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* spellcheck-window.glade:
	  Revised wording and added "Add Lower" button.

2005-08-29  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gui/application.py:
	  Added spell-check methods to delegation dictionary.
	  
	* gui/delegates/guibuilder.py:
	  Added tools menu and spell-check menu items.

	* gui/delegates/spellchecker.py:
	  New delegate for spell-checks.
	  
	* gui/delegates/guiupdater.py:
	  Added sensitivity setting for spell-check items.
	  
	* gui/util/config.py:
	  Added spell-checking settings.

	* lib/util/langlib.py:
	  New file for language codes and names.
	  
	* language-dialog.glade: 
	  New file for language setting dialog.
	  
	* spellcheck-window.glade:
	  New file for spell-check window.
	  
	* edit-dialog.glade:
	  New file for single text edit dialog.
	  
	* toolbar.xml:
	  Added spell-check item.
	
	* menubar.xml:
	  Added spell-check items.

2005-08-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* test: New directory for tests.
	* test/pyenchant: New file to test PyEnchant installation.
	* MANIFEST.in: Added new test directory and all contents.

2005-08-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gui/delegates/fileopener.py:
	  Method _get_main_file_open renamed to _is_file_open and extended to
	  check translation files. Corrected terminology regarding main,
	  translation, file, document, opening and importing.

2005-08-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* releasing.txt: Revised instructions.

2005-08-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	RELEASE 0.1.1

	* gaupol:
	  constants.py:
	  Bumped version numbers to 0.1.1.
	  
	* NEWS: Added release news.

2005-08-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* setup.py: Automated source distribution building.
	
	* releasing.txt: Revised instructions.

2005-08-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gui/util/config.py (write_to_file):
	  Create directory ~/.gaupol if it doesn't exist. Fixes #2816.
	  
	* TODO: Drafted plans for 0.2.0.
